assets/css/style.css
/* Portfolio - main style sheet */



/* main background color */

header, .backColor {background-color: #ffffff;}
header, h2 {font-family: Georgia, 'Times New Roman', Times, serif;}
body, a, p, nav {font-family: Arial, Helvetica, sans-serif;}

body {
  margin: 0;
  width: 1360px;
}


/* banner and rule colors */
.bannerColor {background-color: #4aaaa5;}
.mainRuleColor {background-color: #777777;}
.headerBorderColor {background-color: #cccccc;}
.contentBorderColor {background-color: #dddddd;}

/* header {
  border-bottom: 2px solid #cccccc;
  border-top: none;
} */


/* container ids and classes */
/* i don't like that i have to force font sizing manually
   to match up with the h2 About me - look for other method */
   #name {
    float: left;
    font-size:24px;
    font-weight: 700;
    margin-left: 150px;
    width: 20%;
    padding:20px;
    text-align: center;
  }

/* nav menu */
/* Seems like there may be a better way than
   to force the right margin to align nav with the main content
   Maybe should try and set Nav width to 960 like main content
   and experiment from there. */
ul {
  float: right;
  margin-right: 200px;
  list-style-type: none;

 }

li {
  float: left;
  display: block;
  padding-left: 10px;
  padding-right: 10px;
  padding-top: 10px;
}

a {
  text-decoration: none;
}

#mainSection {
  clear: both;
  overflow: auto;
  background-color: lightskyblue;
  border-top: 2px solid #777777;
  /* background-image: url(assets/images/paper_2.png); */
}
#contentBackColor {background-color: lightskyblue;}

#contentRule {
  background-color: #dddddd;
  height: 2px;
}


article {
  width: 960px;
  padding: 20px;
  background-color: #ffffff;
  /* margin: auto;  */
  margin: 50px 50px 50px 150px; 
  border: 2px solid #dddddd;
}

p {
  line-height: 1.6;
}
#profileImg {
  float: left;
  padding: 20px;
}

footer {
  background-color: #666666;
  height: 40px;
  border-top: 5px solid #4aaaa5;
  text-align: center;
  font-size: 9pt;
 /* this is not the right color */ 
  color: #cccccc;
};

/* text colors */
header {color: #4aaaa5;}
h2 {color: #4aaaa5;}
.bannerTextColor {color: #ffffff;}
.mainTextColor {color: #777777;}

